<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yahid.lightanalyzer.Activity_MeasureRoad">
    <data>
        <variable name="activeRoad" type="com.yahid.lightanalyzer.model.RoadDataVO"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:id="@+id/viewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/headerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/streetNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{activeRoad.streetName}"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/poleHeightTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lane_count"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bodyLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            </LinearLayout>

            <LinearLayout
                android:id="@+id/footerLayout"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/exportBTN"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="exportHandler"
                    android:text="@string/exportBtnText" />

                <Button
                    android:id="@+id/newMeasureBTN"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="newProjectHandler"
                    android:text="@string/newProjectBTN" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>

